--- a/WebContent/PageView.html
+++ b/WebContent/PageView.html
@@ -1,5 +1,7 @@
 <html>
 <head><title>JSPBoard</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+</head>
 <link href="style.css" rel="stylesheet" type="text/css">
 <body><center><br><br>
 	<h2>페이징  & 블록 처리 테스트</h2>
